--- a/js/Configuraciones.json
+++ b/js/Configuraciones.json
@@ -1,7 +1,7 @@
 {
     "navbar": [
       {
-        "nombre": "Inicio2",
+        "nombre": "hola",
         "enlace": "#",
         "activo": true,
         "claseDeCss": "nav-item nav-link"
