--- a/js/Configuraciones.json
+++ b/js/Configuraciones.json
@@ -1,58 +1,48 @@
 {
-    "navbar": [
-      {
-        "nombre": "hola",
-        "enlace": "#",
-        "activo": true,
-        "claseDeCss": "nav-item nav-link"
-      },
-      {
-        "nombre": "Noticias",
-        "enlace": "#Noticias",
-        "activo": false,
-        "claseDeCss": "nav-item nav-link"
-      },
-      {
-        "nombre": "Banner1",
-        "enlace": "#Banner1",
-        "activo": false,
-        "claseDeCss": "nav-item nav-link"
-      },
-      {
-        "nombre": "Banner2",
-        "enlace": "#Banner2",
-        "activo": false,
-        "claseDeCss": "nav-item nav-link"
-      },
-      {
-        "nombre": "Contacto",
-        "enlace": "#Footer",
-        "activo": false,
-        "claseDeCss": "nav-item nav-link"
-      }
-    ],
-    "footer": [
-      {
-        "nombre": "términos condiciones",
-        "enlace": "#TerminosCondiciones",
-        "claseDeCss": "footer-item"
-      },
-      {
-        "nombre": "Facebook",
-        "enlace": "https://facebook.com",
-        "claseDeCss": "mx-2 fab fa-facebook-f"
-      },
-      {
-        "nombre": "Twitter",
-        "enlace": "https://twitter.com",
-        "claseDeCss": "mx-2 fab fa-twitter"
-      },
-      {
-        "nombre": "LinkedIn",
-        "enlace": "https://linkedin.com",
-        "claseDeCss": "mx-2 fab fa-linkedin"
-      }
-      
-    ]
-  }
-  
+  "navbar": [
+    {
+      "nombre": "Inicio",
+      "enlace": "Inicio.html",
+      "activo": true,
+      "claseDeCss": "nav-item nav-link"
+    },
+    {
+      "nombre": "Tabla Usuarios",
+      "enlace": "Tabla-Usuarios.html",
+      "activo": false,
+      "claseDeCss": "nav-item nav-link"
+    },
+    {
+      "nombre": "Tabla Rick",
+      "enlace": "Tabla-Rick.html",
+      "activo": false,
+      "claseDeCss": "nav-item nav-link"
+    },
+    {
+      "nombre": "Registro",
+      "enlace": "Registro.html",
+      "activo": false,
+      "claseDeCss": "nav-item nav-link"
+    }
+    
+  ],
+  "footer": [
+    
+    {
+      "nombre": "Facebook",
+      "enlace": "https://facebook.com",
+      "claseDeCss": "mx-2 fab fa-facebook-f"
+    },
+    {
+      "nombre": "Twitter",
+      "enlace": "https://twitter.com",
+      "claseDeCss": "mx-2 fab fa-twitter"
+    },
+    {
+      "nombre": "LinkedIn",
+      "enlace": "https://linkedin.com",
+      "claseDeCss": "mx-2 fab fa-linkedin"
+    }
+    
+  ]
+}
